# obs-tiktool-captions

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  buildspec.json
ci/: build-linux.sh  build-macos.sh  build-windows.ps1
cmake/common/: bootstrap.cmake
data/: style.qss  tiktok.qrc  tiktool.qrc
data/locale/: en-US.ini
docs/: DESIGN-SOURCE-TYPE.md  FORK-VS-PLUGIN.md  PHASE-2-SERVER-ENFORCEMENT.md  PHASE-3-SILENCE-METERING.md  ROADMAP.md  SUBMIT-OBS.md
docs/screenshots/: README.md
src/: api-client.cpp  api-client.hpp  audio-capture.cpp  audio-capture.hpp  captions-dock.cpp  captions-dock.hpp  captions-wizard.cpp  captions-wizard.hpp  overlay-installer.cpp  overlay-installer.hpp  plugin-main.cpp  scene-setup.cpp  scene-setup.hpp  settings.cpp  settings.hpp  trial-tracker.cpp  trial-tracker.hpp  version.h  ws-client.cpp  ws-client.hpp
